<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/made_by"
            android:textColor="@color/android_cyan" />

        <Button
            android:id="@+id/btn_on_off"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/transparent_list_item_state"
            android:text="@string/on"
            android:textColor="@color/android_cyan"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_noti_off"
            android:textColor="@color/android_cyan"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                ads:adSize="BANNER"
                ads:adUnitId="a15212c5ac35a08"
                ads:loadAdOnCreate="true"
                android:gravity="center" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>